syntax = "proto3";
package neutron.harpoon;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/neutron-org/neutron/v5/x/harpoon/types";

// Query defines the gRPC querier service.
service Query {
  // Returns subscribed contracts to a specified hook type.
  rpc SubscribedContracts(QuerySubscribedContracts) returns (QuerySubscribedContractsResponse) {
    option (google.api.http).get = "/neutron/v5/harpoon/params";
  }
}

// Request type for the Query/SubscribedContracts RPC method.
message QuerySubscribedContracts {
  string hookType = 1;
}

// Response type for the Query/SubscribedContracts RPC method.
message QuerySubscribedContractsResponse {
  repeated string contract_addresses = 1;
}
